# cpptemplate

Docker/run/: Dockerfile
Docker/test/: Dockerfile  requirements.sh
project/: CMakeLists.txt
project/src/: CMakeLists.txt  main.cpp
project/src/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h
scripts/: build.sh  test.sh
